<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="prompt_text">Text for the new note:</string>
    <string name="hint_text">Text</string>
    <string name="ok">OK</string>
    <string name="new_note">Add new note</string>
    <string name="help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="question_delete">Do you like to delete this note?</string>
    <string name="no">No</string>
    <string name="tut_press_plus_btn">Delete file: Open it, delete all notes, and save the file. \n\nCredits to all People, who are sharing open-source work. Thank you so much!\nUsed open-source projects: ColorPickerView + ColorPanelView GitHub: https://github.com/yixia/ZI, FileSaveFragment + FileSelectFragment. CodeProject: http://www.codeproject.com/Articles/704643/An-Android-File-Save-Dialogue</string>
    <string name="del_all">Delete all notes</string>
    <string name="prompt_delete_all">Do you really want to delete all notes?</string>
    <string name="abort">Abort</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit_note">Edit note</string>
    <string name="select_color">Color:</string>
    <string name="selected_color">Selected Color:</string>
    <string name="save">Save</string>
    <string name="open">Open</string>
    <string name="save_prompt">Save notes</string>
    <string name="hint_edit">Filename</string>
    <string name="nothing_to_add">There is nothing to save. Please add notes.</string>
    <string name="saved">Saved successfully.</string>
    <string name="entered_question">Have you entered a filename?</string>
    <string name="open_note">Open notefile [.note]</string>
    <string name="other_version">This file was created by an other version of this program.</string>
    <string name="malformed">Selected file is malformed.</string>
    <string name="load">Read successfully.</string>
    <string name="no_content">File contents no note.</string>
    <string name="new_file">Create new file</string>
    <string name="delete_file">Delete File?</string>
    <string name="yes">Yes</string>
    <string name="deleted">Deleted successfully.</string>
    <string name="deleted_unsuccessfully">File was not deleted.</string>
    <string name="save_question">Do you like to save the currently open file?</string>
    <string name="nothing_to_delete">There is no note to delete.</string>
    <string name="select_tip">To select a file, long-press the item in the list.</string>
    <string name="save_remember">Do not forget to save...</string>
    <string name="app_name">Notes</string>
    <string name="title_activity_about">About...</string>
    <string name="str1about">Idea: Kai_Jan_57</string>
    <string name="str2about">Programming: Kai_Jan_57</string>
    <string name="str5about">If you have any Questions / Suggestions, please write into the comments. Write every detail, if you fond bugs, so I can fix them. I wish you much fun with this app :-)</string>

</resources>
