<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.Kai_Jan_57.note.MainActivity">
    <item
        android:id="@+id/action_add"
        android:title="@string/add"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_menu_compose"></item>
    <item
        android:id="@+id/action_delete_all"
        android:title="@string/del_all"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/delete_all"></item>
    <item
        android:id="@+id/action_save"
        android:title="@string/save"
        android:showAsAction="ifRoom"
        android:icon="@drawable/save"></item>
    <item
        android:id="@+id/action_open"
        android:title="@string/open"
        android:showAsAction="ifRoom"
        android:icon="@drawable/open"></item>
    <item
        android:id="@+id/action_new_file"
        android:title="@string/new_file"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_compose"></item>
    <item
        android:id="@+id/action_help"
        android:title="@string/help"
        android:showAsAction="ifRoom"
        android:icon="@drawable/question"></item>
    <item
        android:id="@+id/action_about"
        android:title="@string/title_activity_about"></item>
</menu>
