<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_text"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_color"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <com.Kai_Jan_57.note.ColorPickerView
            android:id="@+id/ColorPicker1"
            android:layout_width="match_parent"
            android:layout_height="323dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_color"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <com.Kai_Jan_57.note.ColorPanelView
            android:id="@+id/ColorPanelView1"
            android:layout_width="match_parent"
            android:layout_height="41dp" />

    </LinearLayout>
</ScrollView>